<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Autecho</string>
    <string name="action_settings">Settings</string>
    <string name="imageviewcontentdescription">Logo title</string>
    <string name="blank">""</string>
    <string name="userprofile">User Profile</string>
    <string name="connect">Connect</string>
    <string name="bio">Bio</string>

    <!-- Login Page -->
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="username">username</string>
    <string name="userid">userid</string>
    <string name="preference_file_key">com.autecho.dcc.PREFERENCE_FILE_KEY</string>
    <string name="alreadyhaveaccount">Already have an account with us:</string>
    <string name="or">or</string>
    <string name="invalidcredentials">Invalid username or password</string>

    <!-- Profile Page -->
    <string name="myprofile">My Profile</string>

    <!-- Registeration -->
    <string name="requestinvitation">Request Invitation</string>
    <string name="createaccount">Create account</string>
    <string name="confirmaccount">Confirm email</string>
    <string name="emailaddress">Email Address</string>
    <string name="fullname">Fullname</string>
    <string name="password">Create Password</string>
    <string name="checkemailtext">Congrats!, We have sent you an email with the next steps.</string>
    <string name="registeragain"><u>Use a different email address</u></string>
    <string name="havingtrouble">If you are having trouble viewing the email, please check your spam folder. You can also:</string>
    <string name="done">Done</string>
    <string name="fullnamevalidation">Fullname cannot be blank.</string>
    <string name="emailformatvalidation">Invalid email format</string>
    <string name="emailexistsvalidation">Emailid in use</string>
    <string name="passwordvalidation">Password must contain atleast 6 characters</string>
    <string name="sendanotherconfirmationlink"><u>Get another confirmation link</u></string>
    <string name="anotherconfirmationlink"><u>Emailid registered. Send another confirmation link</u></string>

    <!-- Profile -->
    <string name="description">A few words about yourself.</string>

    <!-- Landing Page -->
    <string name="autecho_title">Autecho</string>
    <string name="app_id">334217063344631</string>

    <!-- CreateAut -->
    <bool name="screen_small">false</bool>

    <string name="Iamfeeling">I am feeling</string>
    <string name="about">about</string>
    <string name="post">Post</string>

    <!-- SearchableActivity -->
    <string name="search_hint">Search for people or interests</string>
    <string name="search_label">Search</string>
    <string name="search_results">Search Results</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="feed">Feed</string>
    <string name="map">Map</string>
    <string name="gallery">Gallery</string>
    <string name="video">Videos</string>
    <string name="dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <!-- Miscellaneous -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
