<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/login_bg"
        android:id="@+id/loginmain">
        <ImageView
            android:id="@+id/login_title"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:background="@drawable/login_title"
            android:layout_height="50dp"/>
        <ProgressBar
            android:id="@+id/progress_indicator"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_title"
            android:visibility="invisible"
            style="?android:attr/android:progressBarStyleSmall" />
        <Button
            android:id="@+id/register"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:layout_below="@id/progress_indicator"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            android:background="@drawable/buttonbackground"/>
        <TextView
            android:id="@+id/haveanaccount"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="2dp"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:layout_below="@id/register"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/alreadyhaveaccount"
            />
        <EditText
            android:id="@+id/login_email_address"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/emailaddress"
            android:inputType="textEmailAddress"
            android:layout_below="@id/haveanaccount"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background"
            android:inputType="textPassword"
            android:hint="Password"
            android:layout_below="@id/login_email_address"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:id="@+id/registerationmain">
        <RelativeLayout
            android:id="@+id/topbar"
            android:layout_width="fill_parent"
            android:background="@drawable/topbar"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/registeration_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/createaccount"
                />
            <Button
                android:id="@+id/send_email"
                android:textColor="#ffffff"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/done"
                android:textSize="15sp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/done"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/request_body"
            android:layout_below="@id/topbar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:id="@+id/fullname"
                android:layout_width="275dp"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:background="@drawable/correctfield"
                android:hint="@string/fullname"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/fullname_validation"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="22dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:textColor="#000000"
                android:layout_below="@id/fullname"
                android:visibility="invisible"
                android:text="@string/fullnamevalidation"
                />
            <EditText
                android:id="@+id/email_address"
                android:layout_width="275dp"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:background="@drawable/correctfield"
                android:hint="@string/emailaddress"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:layout_below="@id/fullname_validation"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/emailformat_validation"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="22dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:textColor="#000000"
                android:visibility="invisible"
                android:layout_below="@id/email_address"
                android:text="@string/emailformatvalidation"/>
            <TextView
                android:id="@+id/emailexists_validation"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="22dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:textColor="#000000"
                android:visibility="invisible"
                android:layout_below="@id/email_address"
                android:text="@string/emailexistsvalidation"/>
            <TextView
                android:id="@+id/another_confirmation_link"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="22dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:textColor="#0000ff"
                android:visibility="invisible"
                android:layout_below="@id/email_address"
                android:text="@string/anotherconfirmationlink"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="275dp"
                android:layout_height="40dp"
                android:background="@drawable/correctfield"
                android:paddingLeft="15dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginTop="20dp"
                android:layout_below="@id/emailformat_validation"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/password_validation"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="22dp"
                android:paddingRight="10dp"
                android:textSize="12sp"
                android:textColor="#000000"
                android:visibility="gone"
                android:layout_below="@id/password"
                android:text="@string/passwordvalidation"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/request_sent"
            android:layout_below="@id/topbar"
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/check_email_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/checkemailtext"
                />
            <TextView
                android:id="@+id/having_trouble"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_below="@id/check_email_text"
                android:text="@string/havingtrouble"
                />
            <TextView
                android:id="@+id/send_another_confirmation_link"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="50dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_below="@id/having_trouble"
                android:text="@string/sendanotherconfirmationlink"
                />
            <TextView
                android:id="@+id/register_again"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="50dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_below="@id/send_another_confirmation_link"
                android:text="@string/registeragain"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
